<resources>
    <string name="app_name_shorter">PHA</string>
    <string name="app_name">PersonalHealthAssistant</string>
    <string name="_3s">3s</string>
    <string name="icon">icon</string>
    <string name="time_picker_title">提醒时间：</string>
    <string name="copy_that">朕知道了</string>
    <string name="nick_name">设置昵称</string>
    <string name="birth_year">出生年份</string>
    <string name="sex">性别</string>
    <string name="named">昵称</string>
    <string name="year">1990年</string>
    <string name="height">身高(CM)</string>
    <string name="weight">体重(KG)</string>
    <string name="cm">CM</string>
    <string name="kg">KG</string>
    <string name="my_name">关印</string>
    <string name="male">男</string>
    <string name="_1996">1996</string>
    <string name="_65kg">65KG</string>
    <string name="_175CM">175CM</string>
    <string name="mine">我的</string>
    <string name="foundation_info">完善基本信息</string>
    <string name="foundation">基本信息</string>
    <string name="detail">详细信息</string>
    <string name="title_activity_custom_view">CustomViewActivity</string>
    <string name="today_health_mark">我的健康指数</string>
    <string name="today_water">饮水</string>
    <string name="today_sleep">睡眠</string>
    <string name="keep_hard">仍需努力</string>
    <string name="sport">活动</string>
    <string name="new_values">请输入新值</string>
    <string name="total_avg_step">日均运动</string>
    <string name="total_avg_water">日均饮水</string>
    <string name="total_avg_sleep">日均睡眠</string>
    <string name="to">到</string>
    <string name="title_activity_date_picker">DatePickerActivity</string>
    <string name="total_score">总体表现</string>
    <string name="more_detail">具体细节</string>


</resources>
